<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="contact_mail">contact@yellowtwigs.com</string>
    <string name="location_on_playstore" translatable="false"><a>https://play.google.com/store/apps/details?id=com.yellowtwigs.Knockin.notification</a></string>
    <string name="help">Help</string>
    <string name="help_main">To activate the Multi-Channel mode, do a long click on one of your contacts</string>
    <string name="help_group">To select the entire group, click on the group\'s name</string>
    <string name="help_notification_history">In this screen you can see all the received notifications</string>
    <string name="help_cockpit">From this screen you can call or send an SMS to someone not listed into your address book. You can also connect to email and SoMe</string>
    <string name="help_manage_screen">In this screen you can display your contacts and configure various display options</string>
    <string name="help_notification_manager"> In this screen you can chose to enable/disable the priority 2 notifications </string>
    <string name="help_my_informations"> In this screen you can update your personal details </string>
    <string name="help_contact_us_intent">Contact us</string>
    <string name="help_bubbles_link" translatable="false">http://www.yellowtwigs.com/android10-bubbles-setup</string>
    <string name="help_contact_us_link">https://www.yellowtwigs.com/getting-started</string>
    <string name="help_contact_us_eula">https://www.yellowtwigs.com/end-user-license-agreement</string>
    <string name="help_app_video_link">https://youtu.be/5gKwDljgLNI</string>
    <string name="facebook_app_id">704152513420071</string>
    <string name="fb_login_protocol_scheme">fb2440482259568703</string>
    <string name="help_activity_tutorial_website">Website Tutorial</string>
    <string name="help_activity_tutorial_video">Presentation Video </string>
    <string name="help_activity_notifications_bubbles">Activate the "Notification bubbles"</string>
    <string name="help_activity_contact_us">Contact us</string>
    <string name="help_activity_contact_terms_of_use">Terms and conditions</string>
    <string name="help_activity_contact_generals_informations">For more information</string>
    <string name="left_drawer_in_app">My purchases</string>
    <string name="left_drawer_notification_settings">Manage my notifications</string>
    <string name="teleworking_settings">My teleworking settings</string>
    <string name="left_drawer_statistics">Track my performance</string>
    <string name="left_drawer_home">My contacts</string>
    <string name="left_drawer_my_screen">Display options</string>
    <string name="left_drawer_import">Import contacts</string>
    <string name="settings_invite_friend_text">Invite my friends</string>
    <string name="left_drawer_help">Help</string>
    <string name="settings_contact_popup_phone_call">Phone call</string>
    <string name="manage_my_screen_contact_popup_long_text"> Enable/disable popup before calling a contact</string>
    <string name="invite_friend_text">Use Knock In for a new communication experience</string>
    <string name="filter_sms">SMS</string>
    <string name="filter_mail">Email</string>
    <string name="search_hint">Search</string>
    <string name="main_change_format_phone_book">Help</string>
    <string name="sort_by">Sort by :</string>
    <string name="sort_by_full_name">Full Name</string>
    <string name="sort_by_priority">Priority</string>
    <string name="sort_by_favorite">Favorite</string>
    <string name="main_tri_par_groupe">Group</string>
    <string name="filter_by">Notification filter:</string>
    <string name="filter_by_all">All Notifications</string>
    <string name="filter_by_msg_apps">Messaging Apps</string>
    <string name="filter_by_only_system">System</string>
    <string name="sort_by_date">Date and time</string>
    <string name="sort_by_contact">Contact</string>
    <string name="main_toast_delete_contact"> You removed a contact! </string>
    <string name="main_toast_multi_select_actived">Enable Multi-Select mode</string>
    <string name="main_toast_multi_select_deactived">Disable Multi-Select mode</string>
    <string name="main_toast_multi_select_mode_selected">Selected</string>
    <string name="main_toast_multi_select_mode_selected_more_than_one">Selected</string>
    <string name="main_alert_dialog_group_title">Create a new Group</string>
    <string name="main_alert_dialog_group_subtitle">Choose a name for your group</string>
    <string name="main_alert_dialog_group_favorites_already_exist">Group "Favorites" already exists</string>
    <string name="main_edited_contact">Modified contact</string>
    <string name="main_content_edited_contact">The contact </string>
    <string name="main_content_edited_contact_2">was changed\, do you want to keep the Android address book version, or the Knock In one?</string>
    <string name="main_android_edited_contact">Android</string>
    <string name="main_contact_grid_title">Do you want to call this contact? </string>
    <string name="main_contact_grid_message">You can disable this validation from the options</string>
    <string name="main_alert_dialog_delete_contact_title">Delete contact(s)</string>
    <string name="main_alert_dialog_delete_contact_message">You will delete %1s</string>
    <string name="menu_main_toolbar_multiselect_all_select">All Select</string>
    <string name="contacts_list_title">Contacts</string>
    <string name="groups_list_title">Groups</string>
    <string name="history_title">Notifications</string>
    <string name="bottom_navigation_view_cockpit">Cockpit</string>
    <string name="add_new_contact_title">Add contact</string>
    <string name="add_new_contact_last_name">Name</string>
    <string name="add_new_contact_first_name">Firstname</string>
    <string name="add_new_contact_phone_number">Phone number</string>
    <string name="add_new_contact_phone_number_mobile">Mobile</string>
    <string name="priority_0_subtitle">All the notifications related to this contact will only be visible in the history</string>
    <string name="priority_1_subtitle">The notifications related to this contact will be treated as standard notifications</string>
    <string name="priority_2_subtitle">All the messages of this contact will be notified with high priority</string>
    <string name="add_new_contact_toast">" Firstname field must be populated!"</string>
    <string-array name="add_new_contact_phone_number_arrays">
        <item>Mobile</item>
        <item>Office</item>
        <item>Home</item>
        <item>Main</item>
        <item>Other</item>
        <item>Customization</item>
    </string-array>
    <string name="add_new_contact_mail">Email</string>
    <string name="add_new_contact_mail_mobile">Office</string>
    <string name="add_new_contact_mail_identifier">Email Identifier</string>
    <string name="add_new_contact_mail_identifier_help">Corresponds to the identifier visible when receiving an email</string>
    <string name="priority_0_title">No notification</string>
    <string-array name="add_new_contact_mail_arrays">
        <item>Office</item>
        <item>Home</item>
        <item>School</item>
        <item>Other</item>
        <item>Customization</item>
    </string-array>
    <string name="add_new_contact_add_field">Add a new field</string>
    <string name="add_new_contact_validate">Validate</string>
    <string name="add_new_contact_alert_dialog_title" tools:ignore="Typos">Contact already existing</string>
    <string name="add_new_contact_toast_empty_name">Your contact must have a first name or a last name</string>
    <string name="add_new_contact_alert_dialog_message"> An existing contact is already using this name. Do you want to record it under this name anyway? </string>
    <string name="add_new_contact_alert_dialog_cancel_title">Warning</string>
    <string name="add_new_contact_alert_dialog_cancel_message"> Your updates were not recorded, are you sure ? </string>
    <string name="add_new_contact_alert_dialog_photo_title">Add a picture</string>
    <string name="add_new_contact_alert_dialog_photo_camera">Camera</string>
    <string name="add_new_contact_alert_dialog_photo_galery">Gallery</string>
    <string name="add_new_contact_alert_dialog_photo_cancel">Cancel</string>
    <string name="add_new_contact_intent_title">Select a file</string>
    <string name="add_new_contact_camera_open_title">New picture</string>
    <string name="add_new_contact_camera_open_description">From your Smartphone camera</string>
    <string name="add_new_contact_first_name_empty_field">The first name field can not be empty</string>
    <string name="edit_contact_title">Add a new contact</string>
    <string name="edit_contact_last_name">Name</string>
    <string name="edit_contact_first_name">Firstname</string>
    <string name="edit_contact_phone_number">Phone number</string>
    <string name="edit_contact_phone_number_mobile">Mobile</string>
    <string name="edit_contact_phone_number_home">Home</string>
    <string name="schedule_title">VIP Notifications Schedule</string>
    <string name="schedule_permanent">Permanent (24h/24, 7d/7)</string>
    <string name="schedule_daytime">Workweek Only (5d/7)</string>
    <string name="schedule_custom">Custom Timeframe (7d/7)</string>
    <string name="schedule_weekend">Weekend Only (24h/24)</string>
    <string name="contact_vip_settings">VIP Settings</string>
    <string-array name="edit_contact_phone_number_arrays">
        <item>Mobile</item>
        <item>Office</item>
        <item>Home</item>
        <item>Main</item>
        <item>Other</item>
        <item>Customisation</item>
    </string-array>
    <string name="edit_contact_mail">Email</string>
    <string name="edit_contact_mail_mobile">Office</string>
    <string-array name="edit_contact_mail_arrays">
        <item>Office</item>
        <item>Home</item>
        <item>School</item>
        <item>Other</item>
        <item>Customization</item>
    </string-array>
    <string name="edit_contact_add_field">Add a new field</string>
    <string name="edit_contact_delete_contact">Remove contact</string>
    <string name="edit_contact_delete_contact_message">You are going to remove this contact, are you sure ?</string>
    <string name="edit_contact_validate">Validate</string>
    <string name="edit_contact_cancel">Cancel</string>
    <string name="alert_dialog_notification_message">Authorize Knock In to access your notifications and prioritize them</string>
    <string name="alert_dialog_notification_allow_it">Authorize</string>
    <string name="alert_dialog_notification_dismiss">Do not authorize</string>
    <string name="list_contact_item_whatsapp">Whatsapp</string>
    <string name="list_contact_item_messenger">Messenger</string>
    <string name="first_launch_welcome_long_text"> Enjoy a new way to manage your contacts and to communicate with them</string>
    <string name="first_launch_welcome_accept">Accept and Continue</string>
    <string name="first_launch_confidentiality">Please read our Terms and Conditions from our site <a href="https://www.yellowtwigs.com/end-user-license-agreement">EULA. </a> To accept them, please click on "Accept and continue"</string>
    <string name="multi_select_alert_dialog_title">Notifications display</string>
    <string name="multi_select_alert_dialog_message">Do you authorize Knock In to display high priority notifications</string>
    <string name="multi_select_alert_dialog_allow_it">Authorize</string>
    <string name="multi_select_alert_dialog_dismiss">Do not authorize</string>
    <string name="remove_filter">No filter</string>
    <string name="filter_by_social_media">Social media</string>
    <string name="filter_by_messenger">Messenger</string>
    <string name="filter_by_signal">Signal</string>
    <string name="filter_by_telegram">Telegram</string>
    <string name="filter_call">Calls</string>
</resources>