<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_by_date"
                    android:title="@string/sort_by_date"
                    app:showAsAction="collapseActionView" />

                <item
                    android:id="@+id/sort_by_contact"
                    android:title="@string/sort_by_contact"
                    app:showAsAction="collapseActionView" />

                <item
                    android:id="@+id/notifications_sort_by_priority"
                    android:title="@string/sort_by_priority"
                    app:showAsAction="collapseActionView" />

            </group>
        </menu>
    </item>

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter_by"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/filter_by_all"
                    android:title="@string/filter_by_only_system" />
                <item
                    android:id="@+id/filter_by_social_media"
                    android:title="@string/filter_by_social_media" />
                <item
                    android:id="@+id/filter_by_msg_apps"
                    android:title="@string/filter_by_msg_apps" />
                <item
                    android:id="@+id/call_filter"
                    android:title="@string/filter_call"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/sms_filter"
                    android:title="@string/filter_sms"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/mail_filter"
                    android:title="@string/filter_mail" />
                <item
                    android:id="@+id/whatsapp_filter"
                    android:title="@string/list_contact_item_whatsapp" />
                <item
                    android:id="@+id/facebook_filter"
                    android:title="@string/filter_by_messenger" />
                <item
                    android:id="@+id/signal_filter"
                    android:title="@string/filter_by_signal" />
                <item
                    android:id="@+id/telegram_filter"
                    android:title="@string/filter_by_telegram" />
            </group>
        </menu>
    </item>
</menu>