<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_by_full_name"
                    android:title="@string/sort_by_full_name"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/sort_by_priority"
                    android:title="@string/sort_by_priority"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/sort_by_favorite"
                    android:title="@string/sort_by_favorite"
                    app:showAsAction="collapseActionView" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter_by"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/empty_filter"
                    android:checked="true"
                    android:title="@string/remove_filter"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/sms_filter"
                    android:title="@string/filter_sms"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/mail_filter"
                    android:title="@string/filter_mail" />
                <item
                    android:id="@+id/whatsapp_filter"
                    android:title="@string/list_contact_item_whatsapp" />
                <item
                    android:id="@+id/messenger_filter"
                    android:title="@string/list_contact_item_messenger" />
                <item
                    android:id="@+id/signal_filter"
                    android:title="Signal" />
                <item
                    android:id="@+id/telegram_filter"
                    android:title="Telegram" />
            </group>
        </menu>
    </item>
</menu>