<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alert_dialog_multi_select_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightColor">

    <TextView
        android:id="@+id/alert_dialog_multi_select_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/multi_select_alert_dialog_title"
        android:textColor="@color/textColorDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.45dp"
        android:layout_marginTop="12dp"
        android:background="@color/textColorDark"
        app:layout_constraintTop_toBottomOf="@+id/alert_dialog_multi_select_title" />

    <TextView
        android:id="@+id/alert_dialog_multi_select_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/multi_select_alert_dialog_message"
        android:textColor="@color/textColorDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/alert_dialog_multi_select_button_allow_it"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_button_background_blue"
        android:text="@string/multi_select_alert_dialog_allow_it"
        android:textColor="@color/lightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_dialog_multi_select_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/alert_dialog_multi_select_button_dismiss"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:autoLink="phone"
        android:background="@drawable/rounded_button_background_white"
        android:text="@string/multi_select_alert_dialog_dismiss"
        android:textColor="@color/textColorDarkGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_dialog_multi_select_message" />

</androidx.constraintlayout.widget.ConstraintLayout>