<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_incoming_call"
    tools:context=".FirstLaunchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/first_launch_in_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/first_launch_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/first_launch_welcome_long_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/first_launch_welcome_long_text"
            android:textAlignment="center"
            android:textColor="@color/lightColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_launch_welcome" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/first_launch_logo"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/first_launch_politique"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_launch_welcome_long_text"
            app:srcCompat="@drawable/ic_app_image" />

        <TextView
            android:id="@+id/first_launch_politique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="35dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/first_launch_confidentiality"
            android:textAlignment="center"
            android:textColor="@color/lightColor"
            android:textColorLink="@color/text_link_selector"
            app:layout_constraintBottom_toTopOf="@+id/first_launch_accept_politique"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_launch_logo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/first_launch_accept_politique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/first_launch_welcome_accept"
            android:textColor="@color/darkColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>